Fix dark mode

--- a/components/Pullquote.module.css
+++ b/components/Pullquote.module.css
@@ -1,7 +1,7 @@
 .pullquote {
   position: relative;
   font-size: 1.5em;
-  background: #eee;
+  background: rgba(127, 127, 127, 0.15);
   border-radius: 7px;
   margin: 2rem 0 2rem 0;
 }
